<resources>
    <string name="app_name">Ekg</string>

    <string name="enter">Войти</string>
    <string name="auth">Авторизация</string>

    <string name="login">Зайцев</string>
    <string name="password">3MA8|ZJQ{0</string>

    <string name="date">Дата</string>

    <string name="title_activity_main">activity_main</string>
    <string name="title_activity_note">activity_note</string>
    <string name="title_activity_diary">activity_diary</string>
    <string name="title_activity_messages">activity_messages</string>
    <string name="title_activity_settings">activity_settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Привет, %s</string>
    <string name="nav_header_subtitle"> %s класс %s</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Главная</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_notes">Оценки</string>
    <string name="menu_diary">Расписание</string>
    <string name="menu_messages">Сообщения</string>
    <string name="exit">Выход</string>
    <string name="nav_menu_account">Аккаунт</string>
</resources>