<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_book"
            android:title="@string/menu_home"/>
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_note"
            android:title="@string/menu_notes" />
        <item
            android:id="@+id/nav_diary"
            android:icon="@drawable/ic_book"
            android:title="@string/menu_diary" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_messages"
            android:title="@string/menu_messages" />
    </group>
    <item
        android:id="@+id/menu_account"
        android:title="@string/nav_menu_account">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/settings"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_exit"
                android:icon="?attr/actionModeCloseDrawable"
                android:title="@string/exit" />
        </menu>
    </item>
</menu>