<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.ext.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_diary"
        android:name="com.example.ext.ui.diary.DiaryFragment"
        android:label="@string/menu_diary"
        tools:layout="@layout/fragment_diary" />

    <fragment
        android:id="@+id/nav_notes"
        android:name="com.example.ext.ui.notes.NotesFragment"
        android:label="@string/menu_notes"
        tools:layout="@layout/fragment_notes" />

    <fragment
        android:id="@+id/nav_messages"
        android:name="com.example.ext.ui.notes.NotesFragment"
        android:label="@string/menu_messages"
        tools:layout="@layout/fragment_messages" />
</navigation>